Bug 155994 - Saving passwords in Dolphin/etc.. doesn't seam to interact with KWalletManager at all (kde 4.0)
Summary: Saving passwords in Dolphin/etc.. doesn't seam to interact with KWalletManage...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kwallet (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 160450 163767 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-01-17 14:30 UTC by Diederik van der Boor
Modified: 2008-06-20 01:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Diederik van der Boor 2008-01-17 14:30:00 UTC
Version:           1.1 (using 4.00.00 (KDE 4.0.0) "release 2.2", compiled sources)
Compiler:          gcc
OS:                Linux (i686) release 2.6.22.13-0.3-default

I'm running KDE 4 apps from a KDE 3.5 session. Dolphin doesn't seam to remember passwords for a long time. After installing kwalletmanager it still doesn't seam to help. In fact, there are zero saved passwords in the wallet!
Comment 1 Diederik van der Boor 2008-01-17 14:30:30 UTC
*version should be KDE 4.0.0 from openSUSE 10.3 packages.
Comment 2 Sven Brauch 2008-03-08 20:44:19 UTC
I can confirm this bug in KDE 4.0.2 using SuSE 10.3 packages; it does not even work in any way when running KDE4.

This is really annoying, i ever have to respecify my password and username for kopete, kate (ftp) .... would be really nice if that could be fixed!

Best regards

Sven
Comment 3 Christophe Marin 2008-04-05 17:12:28 UTC
Confirmed on the latest SVN versions as well.

Running kopete or kmail doesn't open kwalletmanager (no icon in the taskbar) and most of the time, passwords are not saved.

I tried with one and two wallets and both are empty if I logout / login my KDE4 session.

Another issue with kwallet : sometimes, applications that store passwords crash (kinda normal for SVN versions) but I still have to enter again passwords when running the applications again (kopete, kmail, ftp passwords used in konqueror / dolphin...)
Comment 4 Mike Burke 2008-04-16 18:23:42 UTC
Confirmed by several people in Ubuntu bug tracker:
https://bugs.launchpad.net/ubuntu/+source/dolphin/+bug/201929
Comment 5 Michael Leupold 2008-05-06 16:41:36 UTC
I just tried and I can reproduce that on current trunk. It seems to be specific to dolphin as other programs (like kopete) store their passwords correctly.
Comment 6 Dustin Steiner 2008-05-21 09:01:06 UTC
I can also confirm the bug - dolphin does not store the passwords but programms like kopete do.

KDE 4.0.3, Fedora 9
Comment 7 Murz 2008-06-05 22:06:34 UTC
I confirm this bug on Kubuntu KDE 4.0.4 and KDE 4.1 Beta 1 (KDE 4.0.80).
Comment 8 Cyrill Helg 2008-06-07 13:02:59 UTC
I can confirm this as well, is http://bugs.kde.org/show_bug.cgi?id=160450 a duplicate?
Comment 9 Sven Brauch 2008-06-07 14:51:32 UTC
Yes, looks like, but this one is the better report i think :p
Comment 10 Christophe Marin 2008-06-07 15:03:22 UTC
*** Bug 160450 has been marked as a duplicate of this bug. ***
Comment 11 Christophe Marin 2008-06-11 10:48:40 UTC
*** Bug 163767 has been marked as a duplicate of this bug. ***
Comment 12 René Krell 2008-06-13 13:02:59 UTC
The problem is solved for me in the latest OpenSUSE 11.0 packages versioned as 4.0.82 (repository: KDE4, unstable, desktop). KWallet saves its information now correctly.
--------------------------------------------------------------------------------
Name        : kde4-kwalletmanager          Relocations: (not relocatable)
Version     : 4.0.82                            Vendor: openSUSE Build Service
Release     : 9.2                           Build Date: Wed 11 Jun 2008 11:19:58 PM CEST
Comment 13 Michael Leupold 2008-06-14 19:32:56 UTC
The problem seems to be that the kioslaves don't use kwallet directly but use kpasswdserver (which in turn saves the password using kwallet).
Comment 14 Michael Leupold 2008-06-19 15:29:54 UTC
SVN commit 822192 by mleupold:

Separate kwalletd from kded and make it a stand-alone executable. It's started whenever the Wallet client API needs it. Disabling wallet support in the options makes kwalletd not 
launch.

CCBUG: 155994
CCMAIL: faure@kde.org


 M  +99 -61    kdeui/util/kwallet.cpp  
 M  +9 -6      kio/misc/kwalletd/CMakeLists.txt  
 M  +9 -10     kio/misc/kwalletd/kwalletd.cpp  
 M  +5 -5      kio/misc/kwalletd/kwalletd.desktop  
 M  +4 -3      kio/misc/kwalletd/kwalletd.h  
 A             kio/misc/kwalletd/main.cpp   [License: LGPL (v2)]


WebSVN link: http://websvn.kde.org/?view=rev&revision=822192
Comment 15 Michael Leupold 2008-06-20 01:06:13 UTC
SVN commit 822372 by mleupold:

Fix one last issue: Make the kwalletd restart properly if it dies.

BUG: 155994


 M  +1 -1      kwallet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=822372