Fix one last issue: Make the kwalletd restart properly if it dies.

BUG: 155994

svn path=/trunk/KDE/kdelibs/; revision=822372